# uclicious

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  cliff.toml  codecov.yml  flake.nix
.github/: FUNDING.yml  release-drafter.yml
.github/workflows/: main.yml  release-drafter.yml  security.yml
examples/: leak-test.rs
fixtures/: connection_1.ucl  connection_2.ucl
src/: error.rs  from_object.rs  lib.rs  raw.rs  traits.rs  variable_handlers.rs
src/raw/: iterator.rs  object.rs  parser.rs  priority.rs  utils.rs
src/variable_handlers/: compound.rs  env.rs
tests/: derive.rs
tests/fixtures/: key_one.ucl
uclicious-derive/: Cargo.toml
uclicious-derive/src/: bindings.rs  block.rs  builder.rs  initializer.rs  lib.rs  options.rs  parser.rs  utils.rs
uclicious-example/: Cargo.toml  another-test.ucl  test.ucl
uclicious-example/src/: main.rs
uclicious_derive/: Cargo.toml
uclicious_derive/src/: bindings.rs  builder.rs  initializer.rs  lib.rs  options.rs  parser.rs
