[package]
name = "uclicious"
version = "0.1.7"
authors = ["Andrey Cherkashin <andoriyu@gmail.com>"]
edition = "2018"
categories = ["config"]
keywords = ["config", "uclicious", "ucl", "libuc"]
description = "Uclicious is a wrapper around Universal Configuration Library (UCL) parser with a lot of sugar."
license = "BSD-2-Clause"
repository = "https://github.com/andoriyu/uclicious"
homepage = "https://github.com/andoriyu/uclicious"
readme = "README.md"

[dependencies]
libucl-bind = { package = "uclicious-libucl-sys", version = "0.8.2" }
bitflags = "1.2.1"
uclicious_derive = { path = "uclicious_derive", optional = true, version = "=0.1.7" }
libc = "0.2"
[dev-dependencies]
uclicious_derive = { path = "uclicious_derive", version = "=0.1.7"}

[features]
vh_env = []
vh_compound = []
vh_basic = ["vh_env", "vh_compound"]
default = ["derive", "vh_basic"]
derive = ["uclicious_derive"]

[[example]]
name = "leak-test"
crate-type = ["bin"]

[workspace]
members = ["uclicious_derive", "uclicious-example"]

